[package]
name = "cstimer-analyzer-web"
version = "0.11.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
env_logger = "0.11.5"
instant = { version = "0.1.13", features = ["wasm-bindgen", "inaccurate"] }
once_cell = "1.21.3"
plotters = "0.3.7"
plotters-canvas = "0.3.1"
pulldown-cmark = "0.13.0"
rust-i18n = "3.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
